FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

ADD_EXECUTABLE(MoleculeTest ${SOURCE_FILES} ${INCLUDE_FILES})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Molecules ${PROJECT_SOURCE_DIR}/RigidBodies ${PROJECT_SOURCE_DIR}/CDSlib ${PROJECT_SOURCE_DIR}/common)
TARGET_LINK_LIBRARIES(MoleculeTest RigidBodies CDSlib common ${MATH_LIBS_TO_USE})
