FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB INCLUDE_FILES *.h)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MultibodyModeling ${PROJECT_SOURCE_DIR}/RigidBodies ${PROJECT_SOURCE_DIR}/CDSlib)
ADD_LIBRARY(MultibodyModeling ${SOURCE_FILES} ${INCLUDE_FILES})

ADD_EXECUTABLE(MultibodyModelingTest ${SOURCE_FILES} ${INCLUDE_FILES})
TARGET_LINK_LIBRARIES(MultibodyModelingTest MultibodyModeling RigidBodies CDSlib ${MATH_LIBS_TO_USE})